--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,8 +5,14 @@
 @tailwind utilities;
 
 @layer components {
+  .color-gradient {
+    @apply bg-gradient-to-tr from-primary to-secondary;
+  }
+  .text-gradient {
+    @apply text-transparent bg-clip-text color-gradient;
+  }
   .link {
-    @apply transition font-bold text-primary underline;
-    @apply hover:opacity-80;
+    @apply transition font-semibold text-primary;
+    @apply hover:opacity-80 hover:underline;
   }
 }
